feat(): fix comments swagger && create Virtual/SongResource && SongShortResource
