# app/Models/Virtual/SongResource.php
@@ -1,22 +1,21 @@
 <?php
 
 namespace App\Models\Virtual;
-
 /**
  * @OA\Schema(
- *     description="Model singer",
+ *     description="Model song",
  *     type="object",
- *     title="Model singer",
+ *     title="Model song",
  * )
  */
 
-class SingerShowResource
+class SongResource
 {
  /**
   * @OA\Property(
   *      property="id",
   *      type="integer",
-  *      example="5",
+  *      example="1",
   *)
   * @var integer
   */
@@ -27,10 +26,19 @@ class SingerShowResource
   *     property="name",
   *     type="string",
   *     description="The name",
-  *     example="Alex"
+  *     example="One song"
   * )
   *
   * @var string
   */
  public $name;
+
+ /**
+  * @OA\Property(
+  *      property="singer",
+  *      @OA\Schema(ref="#/components/schemas/SingerShowResource")
+  *)
+  * @var SingerShowResource
+  */
+ public $singer;
 }
