# app/Models/Virtual/SongShortResource.php
@@ -1,22 +1,21 @@
 <?php
 
 namespace App\Models\Virtual;
-
 /**
  * @OA\Schema(
- *     description="Model singer",
+ *     description="Model song",
  *     type="object",
- *     title="Model singer",
+ *     title="Model song",
  * )
  */
 
-class SingerShowResource
+class SongShortResource
 {
  /**
   * @OA\Property(
   *      property="id",
   *      type="integer",
-  *      example="5",
+  *      example="1",
   *)
   * @var integer
   */
@@ -27,7 +26,7 @@ class SingerShowResource
   *     property="name",
   *     type="string",
   *     description="The name",
-  *     example="Alex"
+  *     example="One song"
   * )
   *
   * @var string
